--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 h1, h2 {
     text-align: center;
+    font-size: 1em;
+    margin: 4px;
 }
 .hr {
     border: 0px solid #FFFFFF;
@@ -9,18 +11,18 @@ h1, h2 {
 .separator {
     clear:both;
     display:block;
-    height:16px;
+    height:8px;
 }
 .separator-2 {
     clear:both;
     display:block;
-    height:24px;
+    height:12px;
 }
 .column {
     width: 290px;
     min-width: 22%;
     max-width: 100%;
-    margin: 4px 8px;
+    margin: 3px 8px;
     padding: 0px;
     float: left;
 }
@@ -30,24 +32,24 @@ h1, h2 {
     color: #000000; 
     background: #FAFAFA; 
     border: 1px solid #F3F3F3; 
-    padding: 16px 4px; 
-    font-size: 18pt; 
+    padding: 5px 4px; 
+    font-size: 12pt; 
     font-weight: bold; 
     text-align: left; 
     text-decoration: none;
-    border-radius: 6px;
+    border-radius: 3px;
     display: block;
 }
 .box-issue, .box-small{
     color: #000000; 
     background: #FAFAFA; 
     border: 1px solid #F3F3F3; 
-    padding: 16px 4px; 
+    padding: 5px 4px; 
     font-size: 18pt; 
     font-weight: bold; 
     text-align: left; 
     text-decoration: none;
-    border-radius: 6px;
+    border-radius: 3px;
     display: block;
 }
 .box-issue {    
@@ -65,31 +67,58 @@ h1, h2 {
 }
 
 .thumbnail {
-    width:24px;
-    height:24px;
+    width:16px;
+    height:16px;
     padding: 0px 8px 0px 16px;
-    border-radius: 6px;
+    border-radius: 4px;
     vertical-align: bottom;
 
 }
 
 #logo {
     text-align:center;
-    padding:20px;
-    margin:10px;
+    padding:0px;
+    margin:8px;
     display: block;
+}
+#logo img {
+    max-height: 42px; 
+}
+
+#fortune {
+    color: #333333;
+    font-size: 11pt;
+    font-weight: bold;
+    text-align:left;
+    padding:0px;
+    margin: 12px 24px 0 8px;
+    display: block;
+    float: right;
+    max-width: 700px;
+}
+
+#datetime {
+    color: #333333;
+    font-size: 11pt;
+    text-align:left;
+    padding:4px;
+    margin: 8px 28px 0 8px;
+    display: block;
+    float: right;
+    min-width: 140px;
+    background: #F6F6F6;
+    border-radius: 4px;
 }
 .container {
     clear: both;
     max-width: 1400px;
     margin: auto;
-
     font-family: ProFontWindows, Calibri, sans; 
     font-size: 16pt;
 }
 .projects {
-    margin: 24px 24px 12px 24px;
-    height: 400px;
+    margin: 12px 24px 12px 24px;
+    height: 200px;
     overflow: auto;
     min-width: 100%;
     max-width: 100%; 
@@ -105,3 +134,10 @@ h1, h2 {
     width:16px;
     height:16px;
 }
+
+.background-ar { background: #51B6E0; }
+.background-ca { background: #FF5252; }
+.background-es { background: #FAFAFA; }
+.background-mx { background: #9CCC65; }
+.background-mx-latam { background: #8AE133; }
+
