--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+html {
+    font-family: ProFontWindows, Calibri, sans; 
+}
 h1, h2 {
     text-align: center;
     font-size: 1em;
@@ -96,11 +99,25 @@ h1, h2 {
     float: right;
     max-width: 700px;
 }
+#filter {
+    color: #333333;
+    font-size: 10pt;
+    font-weight: bold;
+    padding:0;
+    height: 1.6em;
+    width: 98%;
+    margin: 2px;
+    padding:2px;
+    border: none;
+    border: 1px solid #666666
+    border-radius: 4px;
+    font-family: ProFontWindows, Calibri, sans; 
+}
 
 #datetime {
     color: #333333;
     font-size: 11pt;
-    text-align:left;
+    text-align:center;
     padding:4px;
     margin: 8px 28px 0 8px;
     display: block;
